--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,8 +4,34 @@
 
     <!--Toolbar-->
     <style name="Toolbar" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">@dimen/toolbarTextSize</item>
     </style>
+
+    <!--Bottom navigation-->
+    <style name="BottomNavigation" parent="Widget.MaterialComponents.BottomNavigationView">
+        <item name="itemTextAppearanceActive">@style/BottomNavTextAppearance</item>
+        <item name="itemTextAppearanceInactive">@style/BottomNavTextAppearance</item>
+    </style>
+
+    <style name="BottomNavTextAppearance" parent="TextAppearance.MaterialComponents.Caption">
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <!--Button-->
+    <style name="Button">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingVertical">@dimen/buttonPadding</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/buttonTextSize</item>
+        <item name="android:elevation">0dp</item>
+    </style>
+
+
+
+
 
     <!--Login logo-->
     <style name="LoginLogo">
@@ -38,16 +64,6 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">18sp</item>
         <item name="android:maxLines">1</item>
-    </style>
-
-    <!--Access activity button login-->
-    <style name="Button" parent="Widget.AppCompat.Button">
-        <item name="android:layout_width">170dp</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textAllCaps">true</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="android:textSize">16sp</item>
-        <item name="android:elevation">0dp</item>
     </style>
 
     <!--Text view hello community-->
