--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <style name="Base.Theme.Cristinalozanobeauty" parent="Theme.Material3.DayNight.NoActionBar" />
+    <style name="Base.Theme.Cristinalozanobeauty" parent="Theme.Material3.Light.NoActionBar" />
 
     <!--Toolbar-->
     <style name="Toolbar" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
@@ -29,8 +29,42 @@
         <item name="android:elevation">0dp</item>
     </style>
 
+    <!--Client form-->
+    <style name="ClientForm" parent="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColorHint">@color/gray</item>
+        <item name="android:layout_marginVertical">4dp</item>
+    </style>
 
+    <!--Client form text-->
+    <style name="ClientFormText">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:inputType">textCapWords</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/textSize</item>
+    </style>
 
+    <!--Client form date picker-->
+    <style name="ClientFormDatePicker" parent="ThemeOverlay.Material3.MaterialCalendar">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="colorPrimary">@color/gold</item>
+        <item name="materialCalendarHeaderLayout">@style/CalendarHeaderLayout</item>
+        <item name="materialCalendarMonthNavigationButton">@color/gold</item>
+        <item name="materialCalendarYearNavigationButton">@color/gold</item>
+    </style>
+
+    <style name="CalendarHeaderLayout" parent="@style/Widget.Material3.MaterialCalendar.HeaderLayout">
+        <item name="android:visibility">gone</item>
+    </style>
+
+    <!--Checkbox-->
+    <style name="ClientFormCheckbox" parent="Widget.MaterialComponents.CompoundButton.CheckBox">
+        <item name="colorControlActivated">@color/gold</item>
+        <item name="colorControlNormal">@color/black</item>
+    </style>
 
 
     <!--Login logo-->
