--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -22,7 +22,7 @@
             android:gravity="center"
             android:layout_marginVertical="8dp"
             android:text="@string/home_events"
-            android:textColor="@color/light_gold"
+            android:textColor="@color/gold"
             android:textSize="24sp"
             android:textStyle="bold" />
 
