--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#999999</color>
     <color name="gold">#A8815B</color>
-    <color name="light_gold">#E1B788</color>
+    <!--<color name="light_gold">#E1B788</color>-->
     <color name="red">#E33E20</color>
     <color name="green">#0BAB95</color>
     <color name="transparent">#00000000</color>
