Cambiar input de fecha de nacimiento para que sea más ágil. Añadir campo "otros" a Client. Cambiar tratamiento por medicación.

--- a/app/src/main/res/layout/client_form_fragment.xml
+++ b/app/src/main/res/layout/client_form_fragment.xml
@@ -155,16 +155,16 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <!--Treatment-->
+            <!--Medication-->
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/et_treatment"
+                android:id="@+id/et_medication"
                 style="@style/ClientForm"
-                android:hint="@string/client_form_treatment"
+                android:hint="@string/client_form_medication"
                 app:boxStrokeColor="@color/gold"
                 app:hintTextColor="@color/gold">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/et_treatment_text"
+                    android:id="@+id/et_medication_text"
                     style="@style/ClientFormText"
                     android:inputType="textMultiLine" />
 
@@ -248,6 +248,21 @@
                         android:text="@string/no"
                         app:buttonTint="@color/gold" />
                 </RadioGroup>
+
+                <!--Others-->
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/et_others"
+                    style="@style/ClientForm"
+                    android:hint="@string/client_form_others"
+                    app:boxStrokeColor="@color/gold"
+                    app:hintTextColor="@color/gold">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/et_others_text"
+                        style="@style/ClientFormText"
+                        android:inputType="textMultiLine" />
+
+                </com.google.android.material.textfield.TextInputLayout>
 
             </LinearLayout>
 
