--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -63,8 +63,9 @@
 
     <!--Client form radio group-->
     <style name="ClientFormRadioGroup">
-        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
         <item name="android:orientation">horizontal</item>
     </style>
 
